<resources>

    <!-- App Name -->
    <string name="app_name">Run</string>

    <string name="agrement_info">此软件仅仅为了解决Xposed框架与某跑步软件的兼容性问题，请勿用作其他用途，如若不然，后果由你自己承担，与作者无关！</string>
    <string name="update_info_data">1-继续加强反检测\n2-修复无法打开EdXposedManager的bug\n3-添加了亿点逻辑\n4-更新版本号</string>

    <!-- menu -->
    <string name="hide_icon">隐藏图标</string>
    <string name="view_icon">显示图标</string>

    <!-- Url -->
    <string name="url_clouddisk">https://pan.baidu.com/s/1yENMocHijwbhnrCj5afTIg</string>
    <string name="url_github">https://github.com/TinyHai/Run.git</string>
    <string name="url_qqpurify_github">https://github.com/zpp0196/QQPurify.git</string>
    <!--<string name="title_activity_my_main_actitivy">Run</string>-->

    <!-- AboutFragment -->
    <string name="title_about_run">关于模板</string>
    <string name="pay">支付宝捐赠</string>
    <string name="version">当前版本：%1$s</string>
    <string name="agreement">免责声明 (使用本软件即同意)</string>
    <string name="feedback">反馈QQ：2071769694</string>
    <string name="clouddisk">我的百度云盘</string>
    <string name="update_info">更新日志</string>
    <string name="pay_code">支付宝推广红包代码</string>
    <string name="run_github">Github开源地址</string>
    <string name="title_thank">鸣谢</string>
    <string name="thank_qqpurify">感谢QQ净化</string>
    <string name="summary_thank_qqpurify">感谢开源项目QQ净化!</string>
    <string name="thank_all_support">感谢所有捐助过我的人</string>
    <string name="summary_thank_all_support">你们的支持是我进步的动力!</string>

    <!-- MainFragment -->
    <string name="is_active">模板已激活(%1$s)</string>
    <string name="no_active">模板未激活</string>
    <string name="run_status">模板状态</string>
    <string name="run_start">启动模板</string>
    <string name="run_is_start">已启动</string>
    <string name="run_no_start">未启动</string>
    <string name="title_function_setting">功能设置</string>
    <string name="summary_hide_tab">隐藏首页底部的广告Tab</string>
    <string name="hide_tab">隐藏Tab</string>
    <string name="make_dialog_cancelable">使弹窗可取消</string>
    <string name="summary_make_dialog_cancelable">使弹窗变为可按返回键取消</string>
    <string name="prevent_dialog">阻止部分窗口弹出</string>
    <string name="summary_prevent_dialog">实验性, 不建议开启</string>
    <string name="key_words">窗口关键字</string>
    <string name="dlg_title_key_words">请输入关键字</string>
    <string name="dlg_msg_key_words">多个关键字用空格分割</string>
    <string name="title_about">关于</string>
    <string name="about_run">关于模板</string>
    <string name="need_protect_package">需要防止检测的应用包名</string>
    <string name="summary_need_protect_package">xp管理已内置, 无需添加</string>
    <string name="dlg_title_need_protect_package">请输入应用包名</string>
    <string name="dlg_msg_need_protect_package">每个应用包名占一行</string>
    <string name="log_switch">日志开关</string>
    <string name="summary_log_switch">/data/data/运动世界校园包名/infos_1/infos.txt</string>
    <string name="version_mask">版本伪装</string>
    <string name="version_mask_summary">伪装上传成绩时的App版本</string>
    <string name="version_mask_dialog_msg">填写 0 代表不伪装</string>
    <string name="ban_force_update">禁止强制更新</string>
    <string name="upload_api">上传Api</string>
    <string name="upload_api_dialog_msg">只需要填写Api路径部分, 例如访问地址为https://example.com/api/v0/run, 则填写/api/v0/run</string>
    <string name="upload_api_summary">通过抓包获取的上传Api, 抓包类似/api/vXX/runnings/save/record的路径</string>
    <string name="mask_version_name">伪装版本号</string>

</resources>
