<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mdzz.activity.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/isActiveCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/isActiveImage"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:background="@color/no_active_color"
                    app:srcCompat="@android:drawable/ic_dialog_info" />
                <TextView
                    android:id="@+id/isActiveText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:gravity="center"
                    android:textColor="@color/no_active_color"
                    android:text="@string/no_active"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/agreementCV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            app:cardUseCompatPadding="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_agreement"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:text="@string/agreement"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/feedbackCV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardUseCompatPadding="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_feedback"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:text="@string/feedback"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/clouddiskCV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardUseCompatPadding="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_clouddisk"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:text="@string/clouddisk"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/payCV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardUseCompatPadding="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_pay"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:text="@string/tv_pay"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/payCodeCV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardUseCompatPadding="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_pay_code"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:text="@string/pay_code"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/updateInfoCV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardUseCompatPadding="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_update_info"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:text="@string/update_info"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/githubCV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardUseCompatPadding="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_github"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:text="Github开源地址"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardUseCompatPadding="true"
            android:background="?android:attr/selectableItemBackground">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_about"/>
                <TextView
                    android:id="@+id/versionTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:text="@string/version"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
